# robotican

robotican_armadillo/config/: arm_config.yaml  controllers.yaml
robotican_armadillo/launch/: armadillo.launch
robotican_common/models/aruco_cube/meshes/: 24cm_aruco_91.dae
robotican_hardware_interface/: CMakeLists.txt  package.xml
robotican_hardware_interface/config/: arm_config.yaml  controllers.yaml  hardware_interface_config.yaml  motor_data.yaml
robotican_hardware_interface/include/robotican_hardware_interface/: armadillo2_hardware_interface.h  armadillo2_sim_interface.h  komodo.h  robot_base.h
robotican_hardware_interface/launch/: armadillo2_hi_test.launch
robotican_hardware_interface/src/: armadillo2_hardware_interface.cpp  armadillo2_sim_interface.cpp
robotican_hardware_interface/src/robotican_hardware_interface/: #robot_base.cpp#  dxl_monitor.cpp  ping.cpp
robotican_komodo/bash/: .bashrc  komodo_rc.sh
robotican_komodo/config/: Untitled Document  controllers.yaml  hardware_interface_config.yaml  joystick_teleop.yaml
robotican_komodo/description/models/: komodo_base.xacro
robotican_komodo/java/IAEA_Challenge/: .classpath  .project  pos.txt
robotican_komodo/java/IAEA_Challenge/maps/currmap/: IAEA1.yaml  test1.yaml  test2.pgm  test3.pgm
robotican_komodo/java/IAEA_Challenge/ros/: end_map.sh  joystick.sh  kill_joystick.sh  kill_processes.sh  mapping.sh  mapping1.sh  reset_map.sh  save_map.sh  send_pos.sh  start_mission.sh  stop.sh
robotican_komodo/java/IAEA_Challenge/src/GUI/: AddTarget.java  AddTarget1.java  FileInteraction.java  Komodo.java  Komodo_Map.java  Target.java
robotican_komodo/launch/: .komodo_bringup.launch.kate-swp  amcl.launch  gmapping_slam.launch  hector_slam.launch  komodo.launch  komodo_OR_map_nav.launch  komodo_OR_nav.launch  komodo_bringup.launch  komodo_bringup_old.launch  komodo_gazebo.launch  komodo_gazebo_OA.launch  komodo_gazebo_map.launch  komodo_gazebo_nav.launch  komodo_or.launch  komodo_or_simple.launch  move_base.launch  move_base_with_OA.launch  remote.launch
robotican_komodo/launch/remote/: amcl_remote.launch  hector_slam_remote.launch  joystick_teleop_remote.launch  map_saver_remote.launch  mission_control_remote.launch
robotican_komodo/maps/: IAEA1.pgm  map4.pgm  map4.yaml  or1.yaml  room108.pgm  room108.yaml
robotican_komodo/maps/currmap/: currMap.pgm  currMap.yaml
robotican_komodo/navigation/config/: costmap_common_params.yaml  global_costmap_params.yaml  local_costmap_params.yaml  move_base_params.yaml  teb_local_planner_params.yaml
robotican_komodo/scripts/: Maalit.py  PF_maintainer.py  StopNav.py  auto_mission_control.py  auto_mission_controlVer-0.py  globalClass.py  image_saver.py  mission_control.py  object_estimation.py  setup_zbar.sh  test.py  testMaalit.py  zbar_komodo.py
robotican_komodo/scripts/shape-detection/: detect_shapes.py
robotican_komodo/worlds/: IAEA_map.sdf  IAEA_simulation_world.world  IAEA_simulation_world2.world  IAEA_simulation_world3.world  IAEA_simulation_world4.world  IAEA_simulation_world5.world  IAEA_ugv.world  IAEA_ugv_with_obsticles.world  new_world.sdf  or_world (copy).world  or_world_simple.world  simple_room.sdf
robotican_lizi/config/: controllers.yaml
robotican_manipulator_h/: CMakeLists.txt
