<?xml version="1.0"?>
<package>
  <name>robotican_hardware_interface</name>
  <version>0.0.0</version>
  <description>The robotican_hardware_interface package</description>

  <maintainer email="tom@todo.todo">yam</maintainer>

  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>roscpp</build_depend>
  <build_depend>dynamixel_sdk</build_depend>
  <build_depend>yaml-cpp</build_depend>
  <build_depend>controller_manager</build_depend>
<build_depend>gazebo_ros_control</build_depend>
<build_depend>control_toolbox</build_depend>
<build_depend>gazebo_plugins</build_depend>
<build_depend>message_generation</build_depend>
<build_depend>dynamic_reconfigure</build_depend>
<build_depend>serial</build_depend>
<build_depend>tf</build_depend>

<run_depend>message_generation</run_depend>
<run_depend>dynamic_reconfigure</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>dynamixel_sdk</run_depend>
  <run_depend>yaml-cpp</run_depend>
  <run_depend>controller_manager</run_depend>
<run_depend>gazebo_ros_control</run_depend>
<run_depend>control_toolbox</run_depend>
<run_depend>gazebo_plugins</run_depend>
<run_depend>serial</run_depend>
<run_depend>tf</run_depend>
  <!-- The export tag contains other, unspecified, tags -->
<!-- -->
  <export>
    
    <gazebo_ros_control plugin="${prefix}/armadillo2_hw_sim_plugins.xml"/>
</export>

</package>
